[m] Changes before commit email fix

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,29 @@
 *.pyc
 *.swp
+*.bak.sh
 dist
 build
 *.egg*
+#*
+*$
+*.BAK
+*.bak
+*.class
+*.elc
+*.ln
+*.log
+*.mo
+*.o
+*.obj
+*.olb
+*.old
+*.orig
+*.pyo
+*.rej
+*.Z
+*~
+,*
+.#*
+.del-*
+.DS_Store
+.idea
